<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="sevenBTN"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_a"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="aBTN"
                android:text="@string/a"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_b"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="bBTN"
                android:text="@string/b"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_c"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="cBTN"
                android:text="@string/c"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_d"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="dBTN"
                android:text="@string/d"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_e"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="eBTN"
                android:text="@string/e"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_f"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="fBTN"
                android:text="@string/f"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_g"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="gBTN"
                android:text="@string/g"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_h"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="hBTN"
                android:text="@string/h"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_i"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="iBTN"
                android:text="@string/i"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_j"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="jBTN"
                android:text="@string/j"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_k"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="kBTN"
                android:text="@string/k"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_l"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="lBTN"
                android:text="@string/l"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_m"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="mBTN"
                android:text="@string/m"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_n"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="nBTN"
                android:text="@string/n"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="352dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_o"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="oBTN"
                android:text="@string/o"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_p"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="pBTN"
                android:text="@string/p"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_q"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="qBTN"
                android:text="@string/q"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_r"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="rBTN"
                android:text="@string/r"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_s"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="sBTN"
                android:text="@string/s"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_t"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="tBTN"
                android:text="@string/t"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_u"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="uBTN"
                android:text="@string/u"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="365dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_v"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="vBTN"
                android:text="@string/v"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_w"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="wBTN"
                android:text="@string/w"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_x"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="xBTN"
                android:text="@string/x"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_y"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="yBTN"
                android:text="@string/y"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_z"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="zBTN"
                android:text="@string/z"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_empty1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn_empty2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseletter"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="356dp" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/hangman_0"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Game"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>